@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 5.21 Not Released
  - Fix handling expandUrlToMedia
+ - Fix keeping track of which nick is yours in conversations
 
 5.20 2021-02-04T13:00:00+0900
  - Fix handling offline/online nick logic
